--- a/UncrashCueSheet/.classpath
+++ b/UncrashCueSheet/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/commons-logging-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/fluent-hc-4.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/httpmime-4.3.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/poi-3.11/poi-3.11-20141221.jar"/>
+	<classpathentry kind="lib" path="/home/autor/Telechargements/itext-4.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
