--- a/UncrashCueSheet/.classpath
+++ b/UncrashCueSheet/.classpath
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-8-jdk"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/httpclient-4.3.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/httpcore-4.3.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/commons-codec-1.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/fluent-hc-4.3.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/httpcomponents-client-4.3.5/lib/httpmime-4.3.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="/home/autor/Telechargements/poi-3.11/poi-3.11-20141221.jar"/>
-	<classpathentry kind="lib" path="/home/autor/Telechargements/itext-4.2.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
